--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,15 @@
   font-size: 16px;
   line-height: 1.5;
 }
-
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100%;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 500;
   display: flex;
@@ -39,8 +43,6 @@ h2 {
 .main-container {
   display: flex;
   flex-direction: column;
-  width: 90%;
-  height: 90%;
 }
 .left,
 .right {
@@ -137,7 +139,14 @@ label {
 @media screen and (min-width: 900px) {
   .main-container {
     flex-direction: row;
-    height: 100vh;
+    height: 90vh;
+    width: 80vw;
+    margin-top: 2rem;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 58px 1px rgba(0, 0, 0, 0.81);
+    -webkit-box-shadow: 0px 0px 58px 1px rgba(0, 0, 0, 0.81);
+    -moz-box-shadow: 0px 0px 58px 1px rgba(0, 0, 0, 0.81);
   }
   .left,
   .right {
@@ -145,14 +154,17 @@ label {
     height: auto;
   }
   .left {
-    width: 20%;
+    width: 30%;
   }
   .left h2 {
     margin-top: 0;
     margin-bottom: 2.5rem;
   }
+  .left .logo {
+    margin-top: 2rem;
+  }
   .right {
-    width: 80%;
+    width: 70%;
     padding-left: 5rem;
     justify-content: start;
   }
